<resources>
    <string name="app_name" >Definitiva</string>
    <string name="action_settings" >Settings</string>
    <string name="hello_world" >Hello world!</string>
    <string name="nj1a" >Pelagia noctiluca</string>
    <string name="nj1b" >Rhizostoma pulmo</string>
    <string name="nj2a" >Aequorea forskalea</string>
    <string name="nj2b" >Cotylorhiza tuberculata</string>
    <string name="nj3a" >Velella velella</string>
    <string name="nj3b" >Aurelia aurita</string>
    <string name="nj4a" >Chrysaora hysoscella</string>
    <string name="nj4b" >Porpita porpita</string>
    <string name="nj5a" >Carybdea marsupialis</string>
    <string name="nj5b" >Physalia physalis</string>
    <string name="nj6a" >Olindias phosphorica</string>
    <string name="nj6b" >Mnemiopsis leidyi</string>
    <string name="nj7a" >Phyllorhiza punctata</string>
    <string name="nj7b" >Cassiopea andromeda</string>
    <string name="nj8a" >Salpa democratica</string>
    <string name="ij1a" >High</string>
    <string name="ij1b" >Medium</string>
    <string name="ij2a" >Low</string>
    <string name="ij2b" >Low</string>
    <string name="ij3a" >Low</string>
    <string name="ij3b" >Low</string>
    <string name="ij4a" >High</string>
    <string name="ij4b" >Low</string>
    <string name="ij5a" >Very high</string>
    <string name="ij5b" >Very high</string>
    <string name="ij6a" >Very high</string>
    <string name="ij6b" >No danger</string>
    <string name="ij7a" >Low</string>
    <string name="ij7b" >Low</string>
    <string name="ij8a" >No danger</string>
    <string name="j1a1" >Pelagia noctiluca</string>
    <string name="j1a2" >Mauve stinger</string>
    <string name="j1a3" >Danger</string>
    <string name="j1a4" >\n The stinger produced by Pelagia usually produces immediate pain with urticarial and edema. Also burning, vesicles, papules and scabs may appear and remain. Itching is typical. After-effects may be scars or keloids.\n </string>
    <string name="j1a5" >Distribution and Habitat</string>
    <string name="j1a6" >\n Widely distributed in warm and temperate waters of the world’s ocean. In the early eighties, Pelagia was very abundant in the Mediterranean, then disappeared and reappeared at intervals more or less than ten years, but since the warm year 2003, its presence is almost constant in the western Mediterranean. It is typically and offshore species, although they can reach the coastline, especially in midsummer, when they can form extensive banks that lash the coast for months.\n </string>
    <string name="j1a7" >Frequency</string>
    <string name="j1a8" >\n In the Catalan coast can be very frequent in spring-summer, although some years, depending on the environmental and weather conditions, they can be absent in the majority of beaches.\n </string>
    <string name="j1a9" >Characteristics</string>
    <string name="j1a10" >\n It usually presents a brilliant pink and mauve colour. The semi-spherical umbrella can measure between 5 and 20 cm. The umbrella is armed with eight long marginal tentacles, that extended, can reach up to ten meters, and the mouth is equipped with four long and thick oral arms. The surface of the umbrella is covered with brown warts. Pelagia, as other jellyfish, has the ability to bioluminescent or produce light. As the arms of Pelagia are very thick and dense, if they arrive at an aquiculture system, fishes in the farms can be killed. Given that this species also eat fish eggs and fish larvae, the impact on fish stocks and fishery can be devastating.\n</string>
    <string name="j1a11" >It is considered one of the most abundant and important species along the Catalan coats, and the vast majority of jellyfish’s stings recorded along the bathing season are attributable to this species.</string>
    <string name="j1b1" >Rhizostoma pulmo</string>
    <string name="j1b2" >Barrel jellyfish</string>
    <string name="j1b3" >Danger</string>
    <string name="j1b4" >\nWhen Rhizostoma stings, a moderate pain with burning sensation is commonly sensed. Local symptoms include local hives, sneezing, and eye irritation.\n</string>
    <string name="j1b5" >Distribution and Habitat</string>
    <string name="j1b6" >\nIts distribution includes the North and South Atlantic Oceans, the Mediterranean, the Black Sea, and the Red Sea. In the Catalan sea this species is considered as a coastal species. The small jellies are produced in spring and the big adults are more evident in summer. Usually recorded at or near the water surface.\n</string>
    <string name="j1b7" >Frequency</string>
    <string name="j1b8" >\nIt lives in abundance along our coast.\n</string>
    <string name="j1b9" >Characteristics</string>
    <string name="j1b10" >\nIt is the biggest jellyfish in the Catalan coast. The diameter of its bell-shaped umbrella can reach between 10 and 40 cm and can weigh up to 10 kilograms. The colour is milky white or slightly blue with a violet ring along the edge of the umbrella. This species lacks marginal tentacles, but it present eight thick oral arms; inverted Y-shaped fuse together and with no branches, which are also white-blue colour. Other organisms, like fishes and small crabs, may use this species as shelter, and are transported by the currents between its oral arms. The bearing of Rhizostoma is majestic, and the movements are slow and mighty. For many people of Southeast Asia, especially the Chinese, it is considered a delicious dish.\n</string>
    <string name="j2a1" >Aequorea forskalea</string>
    <string name="j2a2" >Many-ribbed jellyfish</string>
    <string name="j2a3" >Danger</string>
    <string name="j2a4" >\nHarmless to humans, although it is better not touch it.\n </string>
    <string name="j2a5" >Distribution and Habitat</string>
    <string name="j2a6" >\nIt is distributed throughout the Atlantic and Indo-Pacific Oceans, in all suitable temperate to tropical waters, occurring occasionally even in mid-ocean. Inhabits coastal and offshore waters.\n</string>
    <string name="j2a7" >Frequency</string>
    <string name="j2a8" >\nIn the Catalan coast during last year has become a frequent species, and when occurring it does in large numbers.\n</string>
    <string name="j2a9" >Characteristics</string>
    <string name="j2a10" >\nIt presents a transparent plate-shaped umbrella, which can reach up to 17 cm in diameter, with a denser mass in the centre. It is distinguished easily from the other jellyfish due to many blue radial channels that connect the centre to the margin of the umbrella. It has numerous thin marginal tentacles and no oral arms. This species has allowed the isolation of the green fluorescent protein (GFP), a substance at the base of the fluorescence of many jellyfish. The discovery of this protein has allowed us to develop new techniques for the diagnosis of diseases and the research in the field of molecular biology. This discovery has led to applications in the diagnostic field, allowing us to mark specific cell lines. The discovery of the GFP was worth American researchers Osamu Shimomura, Martin Chalfie and Roger Tsien the Chemistry Nobel Prize in 2008\n</string>
    <string name="j2b1" >Cotylorhiza tuberculata</string>
    <string name="j2b2" >Fried egg jellyfish</string>
    <string name="j2b3" >Danger</string>
    <string name="j6a1" >Olindias phosphorica</string>
    <string name="j6a2" >Cigar jellyfish</string>
    <string name="j6a3" >Danger</string>
    <string name="j6a4" >\nAfter the sting of this species, very characteristic zigzag red lines appeared in the skin. The pain is instant and intense.\n</string>
    <string name="j6a5" >Distribution and Habitat</string>
    <string name="j6a6" >\nIt is a hydromedusa with a broad global distribution, being known from temperate Atlantic waters and from the Mediterranean Sea. In recent years, it has been very abundant along the coasts of Tunisia in the Mediterranean, causing problems for the tourism industry.\n</string>
    <string name="j6a7" >Frequency</string>
    <string name="j6a8" >\nThe presence of these jellyfish along the Catalan coast is sporadic. It never forms extended bank, but can be locally abundant.\n</string>
    <string name="j6a9" >Characteristics</string>
    <string name="j6a10" >\nThis Mediterranean hydromedusa species is transparent in colour, and the umbrella can reach up to 8 cm diameter. Through the umbrella four radial canals arranged in a distinctive red cross-like pattern can be observed. Small red-blue tentacles surround the umbrella.\n</string>
    <string name="j6b1" >Mnemiopsis leidyi</string>
    <string name="j6b2" >Sea walnut, Comb jelly</string>
    <string name="j6b3" >Danger</string>
    <string name="j6b4" >\nAs it is not a cnidarian, but a ctenophore, it doesn’t have cnidocysts and therefore it is not poisonous. It is harmless to humans, but very harmful to the invaded marine ecosystems.\n</string>
    <string name="j6b5" >Distribution and Habitat</string>
    <string name="j6b6" >\nThis species is native from estuaries and coastal areas of the western Atlantic Ocean, from the U.S. coast to Argentina. In the early 80’s arrived to the Black Sea transported in ballast water of American tankers, and had expanded since the last three decades to almost all Eurasian waters, including the Mediterranean basin. Records from the western Mediterranean first appeared in the year 2006, and in the year 2009, it was first recorded in Catalan waters.\n</string>
    <string name="j6b7" >Frequency</string>
    <string name="j6b8" >\nThis invasive species was first reported in the Catalan coast in the year 2009. Nowadays, its presence is intermittent in some parts of Catalonia, but in the southern area, especially in the Ebro Delta coast, there is an established population that is under a rigorous study in order to determine possible invasion effects.\n</string>
    <string name="j6b9" >Characteristics</string>
    <string name="j6b10" >\nMnemiopsis leidyi is a ctenophore and not a cnidarian, but is included in the jellyfish group due to its gelatinous consistency. It has a lobed oval-shaped body that can reach up to 12 cm in length. It is transparent in colour, and presents four rows of ciliated combs that run along the body vertically and glow blue-green when disturbed. This species does not swim with the pulsations of the body (as jellyfish do), but the eight ciliated bands while beating, propel the movements. In the Black Sea, where the ecosystem was already weakened by pollution and overfishing, Mnemiopsis leidyi has depleted the fish stocks by eating eggs and fish larvae and also the prey of planktonic larvae. We do not know if its impact in the Mediterranean will be such as that suffered by the Black Sea, therefore rigorous research is taking place in the Catalan invaded area in order to predict and estimate the invasion impact.\n</string>
    <string name="it" >Treatment</string>
    <string name="t1a" >What to do if a jellyfish stings you?</string>
    <string name="t1b" >\n Stay calm, breathe normally, leave the water immediately, and wash the affected area with seawater. The seawater is essential for cleaning the skin and washes the pieces of jellyfish that may be stuck to the skin and for diluting the toxin that has not penetrated yet.
    1. Wash with seawater
    2. Remove rest of tentacles with gloves or tweezers
    3. Apply hot compresses (no more than 45ºC), of not possible, then apply cold compresses
    4. If the pain persists, apply Lidocaina
    5. Apply antiseptic in the wound until it heal
    </string>
    <string name="t7a" >If I see a jellyfish in the distance, may I dive?</string>
    <string name="t7b" >\n If there are stinging jellyfish in the sea is better not to swim, unless they are really few. Jellyfish that sting hard, usually have very long tentacles: Pelagia noctiluca, for example, can reach up to 10 meters long, while Phisalia physalis (Portuguese man-of-war) can reach 20 meters.</string>
</resources>