<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
    <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingRight="5dp" >

        <ImageView
                android:layout_width="385dp"
                android:layout_height="120dp"
                android:id="@+id/ijbaa"
                android:contentDescription="@string/nj6a"
                android:scaleType="fitXY"
                android:src="@drawable/explicacion6a"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:typeface="sans"
                android:background="#FCD9B9"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="10dp"
                android:text="@string/j6a1" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/j6a2"
                android:id="@+id/textView2"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#bbbbbb"/>

        <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:stretchColumns="*">

            <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/j6a3"
                        android:id="@+id/textView"
                        android:layout_gravity="left|center_vertical"
                        android:paddingLeft="10dp"
                        android:textColor="#bbbbbb"/>

                <ImageView
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:id="@+id/ij6ab"
                        android:contentDescription="@string/ij6a"
                        android:layout_gravity="left"
                        android:src="@drawable/alta"/>
            </TableRow>

        </TableLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/j6a4"
                android:id="@+id/textView3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:maxLines="50"
                android:layout_gravity="center"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/j6a5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#bbbbbb"
                android:paddingLeft="10dp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:maxLines="50"
                android:text="@string/j6a6"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/j6a7"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textColor="#bbbbbb"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/j6a8"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:maxLines="50"
                android:id="@+id/textView5"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/j6a9"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#bbbbbb"
                android:paddingLeft="10dp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/j6a10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/textView6"
                android:maxLines="50"
                android:singleLine="false"/>

    </LinearLayout>
</ScrollView>