<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
    <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="383dp"
                android:layout_height="115dp"
                android:id="@+id/it1a"
                android:contentDescription="@string/it"
                android:scaleType="fitXY"
                android:src="@drawable/title"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/tt1a"
                android:background="#FCD9B9"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t1a" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/t1b"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:maxLines="50"
                android:id="@+id/tt1b"/>

    </LinearLayout>
</ScrollView>